--- a/css/style.css
+++ b/css/style.css
@@ -637,7 +637,7 @@ strong {
   HERO        
 -----------------------------------------*/
 .hero-section {
-  background-image: url('../images/Mt.+Kilimanjaro+from+Maili+Tisa-1.jpg');
+  background-image: url('../images/ooyshg1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -981,6 +981,99 @@ strong {
 .member-block-info h4,
 .member-block-info p {
   margin-bottom: 0;
+}
+
+/* format for partners */
+.tm-about-img-container { margin-top: 50px; }
+
+.tm-gallery-container {
+	overflow: auto;
+	margin-left: -5px;
+	margin-right: -5px;
+}
+
+.tm-img-container {	float: left; }
+
+.tm-img-container-1 { 
+	margin-bottom: 10px;
+	width: 50%; 
+}
+
+.tm-img-tn {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.tm-img-tn {
+	display: block;
+	margin: 0 auto;
+}
+
+/* Media Queries */
+@media (min-width: 576px) {
+	.container { width: 100%; }
+	.tm-img-container-1 { width: 20%; }
+}
+
+@media (min-width: 768px) {
+	.tm-about-img-container { margin-top: 0; }
+}
+
+@media (min-width: 992px) {
+	.container { width: 100%; }
+
+	.tm-section { margin-bottom: 10px; }
+
+	.tm-content-div { padding: 80px 40px 30px 80px;	}
+
+	.tm-img-container-1 {
+		margin-bottom: 10px;
+		width: 33.3334%;
+	}
+}
+
+@media (min-width: 1200px) {		
+	.container { width: 100%; }	
+	.tm-button-wide { padding: 18px 68px; }
+	.tm-img-container-1 { width: 20%; }
+}
+
+@media (min-width: 1500px) {	
+	.container { width: 100%; }
+	p { margin-bottom: 30px; }
+
+	.tm-gallery-container {
+		overflow: auto;
+		margin-left: -10px;
+		margin-right: -10px;
+	}
+
+	.tm-img-tn {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+}
+
+@media (min-width: 1800px) {
+	.container,
+	.tm-left-right-container {
+	    width: 100%;
+	}
+
+	p { margin-bottom: 36px; }
+
+	.tm-gallery-container {
+		overflow: auto;
+		margin-left: -10px;
+		margin-right: -10px;
+	}
+
+	.tm-img-container-1 { width: 20%; }
+
+	.tm-img-tn {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
 }
 
 
