--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,14 @@
 -----------------------------------------*/
 :root {
   --white-color:                  #ffffff;
-  --primary-color:                #87CEEB;
-  --secondary-color:              #008000;
+  --primary-color:                #81B29A;
+  --secondary-color:              #558DCA;
   --section-bg-color:             #F4F1DE;
   --custom-btn-bg-color:          #98fb98;
-  --custom-btn-bg-hover-color:    #00bfff;
+  --custom-btn-bg-hover-color:    #7AB14C;
   --dark-color:                   #000000;
   --p-color:                      #717275;
-  --link-hover-color:             #87cefa;
+  --link-hover-color:             #98fb98;
 
   --body-font-family:             'DM Sans', sans-serif;
 
@@ -432,7 +432,7 @@ strong {
 }
 
 .sticky-wrapper.is-sticky .navbar {
-  background-color: rgb(0,128,0);
+  background-color: rgb(85,141,202);
 }
 
 .navbar {
